creating tale of expenses

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,82 +1,94 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
 
 * {
-   font-family: 'Raleway', sans-serif;
-   margin: 0;
-   padding: 0
+  font-family: "Raleway", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-   overflow-x:hidden;
-   overflow-y:hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 header {
-   color: white;
-   background-color: rgb(198, 66, 87);
-   height: 25%;
-   width: 100%;
-   padding: 5%;
-   font-size: 17px;
+  color: white;
+  background-color: rgb(198, 66, 87);
+  height: 25%;
+  width: 100%;
+  padding: 5%;
+  font-size: 17px;
 }
 
 #project-and-budget {
-   width: 100%;
-   padding: 4%;
-   font-size: 19px;
-   background-color: rgb(198, 66, 87);
-   color: white;
+  width: 100%;
+  padding: 4%;
+  font-size: 19px;
+  background-color: rgb(198, 66, 87);
+  color: white;
 }
 
 .list {
-   line-height: 155%;
+  line-height: 155%;
 }
 
 #form-new-edit-project {
-   padding: 6%;
-   font-size: 22px;
-   line-height: 2;
+  padding: 6%;
+  font-size: 22px;
+  line-height: 2;
 }
 
 #form-action-buttons {
-   float: right;
+  float: right;
 }
 td {
-   display: block;
+  display: block;
 }
 
 input {
-   border-top: 0;
-   border-right: 0;
-   border-left: 0;
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
 }
 
 #expenses {
-   display: inline-block;
-   position: absolute;
-   bottom: -9px;
-   right: -1px;
-   /* background: #FFFCF0; */
-   height: 57%;
-   border-radius: 3vh;
-   width: 89%;
-   margin: 1vh;
-   /* border-style: solid; */
-   /* border-width: 13px; */
-   /* border-color: white; */
-   overflow: auto;
+  display: inline-block;
+  position: absolute;
+  bottom: -96px;
+  right: 15px;
+  /* background: #FFFCF0; */
+  height: 56%;
+  border-radius: 3vh;
+  width: 89%;
+  margin: 1vh;
+
+  /* border-style: solid; */
+  /* border-width: 13px; */
+  /* border-color: white; */
+  overflow: auto;
 }
 
 #add-expence {
-   margin-top: 55%;
-   margin-left: 41%;
-   position: fixed;
-   font-size: 33px;
+  margin-top: 55%;
+  margin-left: 41%;
+  position: fixed;
+  font-size: 33px;
 }
 
 #secondtable {
-   margin-left: 4%;
-   margin-top: -44%;
-
+  margin-top: -249px;
 }
 
+#expensesList {
+  display: none;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(198, 66, 87);
+  color: white;
+  text-align: center;
+}
