--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,29 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
 
+@media (min-width: 1025px) and (max-width: 1280px) {
+  
+
+#project-and-budget {
+  width: 100%;
+  padding: 3%;
+  font-size: 19px;
+}
+
+nav {
+  font-size: 22px;
+}
+.navbar {
+  padding: 2%;
+}
+}
+
 * {
   font-family: "Raleway", sans-serif;
   margin: 0;
   padding: 0;
 }
 
-body {
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
-
-header {
+nav {
   color: white;
   background-color: rgb(198, 66, 87);
   height: 25%;
@@ -27,6 +39,21 @@ header {
   background-color: rgb(198, 66, 87);
   color: white;
 }
+
+#create {
+  width: 36%;
+    padding: 1px 8px;
+    border: none;
+    border-radius: 7px;
+    /* background-color: #9B0E48; */
+    /* border: 31px coral; */
+    margin: 4px 2px;
+    /* color: white; */
+    border: 1px solid #828a90;
+    border-radius: 4px;
+    background: none;
+    /* box-shadow: 0 0 black; */
+  }
 
 .list {
   line-height: 155%;
@@ -53,15 +80,14 @@ input {
 
 #expenses {
   display: inline-block;
-  position: absolute;
-  bottom: -96px;
-  right: 15px;
+  /* position: absolute; */
+  bottom: 50px;
+  right: 0px;
   /* background: #FFFCF0; */
   height: 56%;
   border-radius: 3vh;
   width: 89%;
   margin: 1vh;
-
   /* border-style: solid; */
   /* border-width: 13px; */
   /* border-color: white; */
@@ -91,4 +117,19 @@ input {
   background-color: rgb(198, 66, 87);
   color: white;
   text-align: center;
+}
+
+#pdfDownloader {
+  margin-left: 13%;
+  margin-top: -41%;
+  color: white;
+  font-size: 18px;
+  position: absolute;
+}
+
+#form-expenses {
+  margin-left: 6%;
+  /* margin-top: -24%; */
+  margin-top: -24%;
+  display: inline-block;
 }
